# TOP25

./: README.md
matrix-product/: CMakeLists.txt  build_all.sh  cachegrind.out.2372  cachegrind.out.500  cachegrind.out.5084  info.md  results.csv  results_LL.csv  results_LR.csv  results_RL.csv  results_RR.csv
matrix-product/benchmark/: measure_perf.py  plot.py
matrix-product/build-rr/: CMakeCache.txt  Makefile  cmake_install.cmake
matrix-product/build-rr/cmake_packages/Kokkos/: KokkosTargets.cmake
matrix-product/build-rr/src/: Makefile  cmake_install.cmake
matrix-product/src/: CMakeLists.txt  main.cpp
mesh/src/: main.cpp
